# pubchem-extractor

./: .env.sample  .gitignore  .isort.cfg  CHANGELOG.md  README.md  config.example.py  mypy.ini  pyproject.toml
data/: save_json.py
info/: list.py  request_limit.md  status_codes.md
molecad/: __init__.py  __main__.py  api.py  api_db.py  api_types.py  builder.py  cli.py  cli_db.py  console.py  data_handler.py  db.py  db_import.py  downloader.py  downloader_types.py  error_handler.py  error_handlers.py  errors.py  log.py  main.py  models.py  pubchem_requests.py  routes.py  sample_sync_requests.py  search.py  settings.py  setup_.py  sync_req.py  sync_requests.py  types_.py  url_builder.py  utils.py  validator.py
molecad/cli/: console.py  db.py  downloader.py  main.py  utils.py  validator.py
molecad/cli_tools/: console.py  db.py  downloader.py  errors.py  validator.py
molecad/console/: cli.py  cli_db.py  downloader.py  errors.py  utils.py  validator.py
molecad/data/: builder.py  cli.py  db.py  downloader.py  request.py  saver.py  script.example.sh  utils.py
molecad/data/console/: __main__.py  cli.py  script.example.sh
molecad/data/core/: db.py  downloader.py  search.py  utils.py
molecad/database/: db.py  search.py
notebooks/: pubchem-sync-requests.ipynb  sync-req.ipynb
old/: .isort.cfg  api.py  api_db.py  cli.py  cli_db.py  error_handler.py  errors.py  mypy.ini  pyproject.toml  settings.py  utils.py
old/tests/: test_molecad.py
src/: settings.py  utils.py
tests/: test_cli.py  test_db.py  test_downloader.py  test_molecad.py  test_request.py  test_url_builder.py
