[tool.poetry]
name = "molecad"
version = "0.1.0"
description = "API for retrieving data from Pubchem databases and performing substructure search through local database"
authors = ["Anna Vasileva <vasilyeva1510@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
rdkit-pypi = "^2021.3.4"
motor = "^2.5.0"
fastapi = "^0.68.0"
pathlib = "^1.0.1"
loguru = "^0.5.3"
click = "^8.0.1"
pydantic = {version = "^1.8.2", extras = ["dotenv"]}
uvicorn = "^0.15.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy-extensions = "^0.4.3"

[tool.black]
line-length = 100
target_version = ["py37"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
